--- a/.classpath
+++ b/.classpath
@@ -2,10 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="/home/mohammad/workspace/AppraisalGoalManagement/lib/disco.jar" sourcepath="lib/disco-src.zip">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/AppraisalGoalManagement/lib/disco-api.zip!/"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="lib/disco.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
