--- a/src/TaskModel/ABC.properties
+++ b/src/TaskModel/ABC.properties
@@ -3,3 +3,16 @@
 A@difficulty = MOST_DIFFICULT
 B@difficulty = DIFFICULT
 e@difficulty = NORMAL
+F@difficulty = MOST_DIFFICULT
+k@difficulty = DIFFICULT
+C@difficulty = NORMAL
+g@difficulty = MOST_DIFFICULT
+h@difficulty = DIFFICULT
+D@difficulty = NORMAL
+I@difficulty = MOST_DIFFICULT
+l@difficulty = DIFFICULT
+m@difficulty = NORMAL
+J@difficulty = MOST_DIFFICULT
+n@difficulty = DIFFICULT
+o@difficulty = NORMAL
+p@difficulty = MOST_DIFFICULT
