--- a/.classpath
+++ b/.classpath
@@ -2,9 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="lib/disco.jar" sourcepath="lib/disco-src.zip">
+	<classpathentry kind="lib" path="/home/mohammad/workspace/AffectiveMotivationalCollaborationFramework/lib/disco.jar" sourcepath="/home/mohammad/workspace/AffectiveMotivationalCollaborationFramework/lib/disco-src.zip">
 		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/home/mohammad/workspace/AppraisalGoalManagement/lib/disco-api.zip!/"/>
+			<attribute name="javadoc_location" value="jar:file:/home/mohammad/workspace/AffectiveMotivationalCollaborationFramework/lib/disco-api.zip!/"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
