Fixed the retry in case of a failure. + A bug in turn update and achievement motive should be fixed.

--- a/models/Example-GoalManagement.properties
+++ b/models/Example-GoalManagement.properties
@@ -12,6 +12,8 @@ PlacePanel@difficulty = NORMAL
 WeldPanel@difficulty = DIFFICULT
 CheckPanelAttachment@difficulty = DIFFICULT
 CheckWirings@difficulty = NORMAL
-CheckControlSwitch@difficulty = DIFFICULT
+CheckControlSwitch@difficulty = MOST_DIFFICULT
 CheckCascadingCells@difficulty = NORMAL
 CheckOutputCurrent@difficulty = DIFFICULT
+
+TakeOutCable@retry = true
