More work on the 3rd example.

--- a/models/Example-TaskDelegation.properties
+++ b/models/Example-TaskDelegation.properties
@@ -2,7 +2,10 @@
 
 InstallSolarPanel@difficulty = MOST_DIFFICULT
 CheckHardware@difficulty = NORMAL
-_CheckPanelAttachment@difficulty = DIFFICULT
+CheckPanelAttachment@difficulty = DIFFICULT
 CheckWirings@difficulty = NORMAL
 CallSupervisor@difficulty = MOST_DIFFICULT
 CheckPanelAttachmentPrimitive@difficulty = DIFFICULT
+
+CheckPanelAttachment@retry = true
+CheckPanelAttachmentPrimitive@retry = true
