--- a/models/AstronautRobot.properties
+++ b/models/AstronautRobot.properties
@@ -37,12 +37,13 @@ Propose.Should(PreparePanel)@format = The first step is to prepare the panel.
 Propose.Should(PrepareConnector)@format = Let's prepare the connector together.
 Propose.Should(RemoveLeftCoverPrimitive)@format = Please try to remove the left cover.
 Propose.Should(TakeOutCable)@format = Now, take out the cable.
-Propose.Should(PlacePanel)@format = So first, I am going to place the panel.
+Propose.Should(PlacePanel)@format = So, first, I am going to place the panel.
 Propose.Should(WeldPanel)@format = You should weld the panel now.
-Propose.Should(CheckHardware)@format = We are done with this. Let's check the hardware.
+Propose.Should(CheckHardware)@format = We are done with this. Let's check the hardware together.
 Propose.Should(CheckPanelAttachment)@format = My turn first. I am going to check the panel attachment.
 Propose.Who(CheckPanelAttachmentPrimitive)@format = I failed! But, you are able to do this.
-Propose.Should(CheckPanelAttachmentPrimitive)@format = I failed! Please check panel attachment for me.
+Propose.Should(CheckPanelAttachmentPrimitive)@format = Please check panel attachment for me.
 Propose.Should(CheckWirings)@format = We are almost there. Please check the wirings.
 Propose.Should(CheckFunction)@format = And finally. We should check the panel function.
+Propose.Should(CheckControlSwitch)@format = I am going to check the control switch.
 Propose.Should(CheckCascadingCells)@format = As your final step, check the cascading cells.
