--- a/models/AstronautRobot.properties
+++ b/models/AstronautRobot.properties
@@ -37,6 +37,7 @@ Propose.Should(PreparePanel)@format = The first step is to prepare the panel.
 Propose.Should(PrepareConnector)@format = Let's prepare the connector together.
 Propose.Should(RemoveLeftCoverPrimitive)@format = Please try to remove the left cover.
 Propose.Should(TakeOutCable)@format = Now, take out the cable.
+Propose.Should(FixPanel)@format = Now, time to fix the panel.
 Propose.Should(PlacePanel)@format = So, first, I am going to place the panel.
 Propose.Should(WeldPanel)@format = You should weld the panel now.
 Propose.Should(CheckHardware)@format = We are done with this. Let's check the hardware together.
