Made minor changes. + Added some notes about questionnaires.

--- a/models/AstronautRobot.properties
+++ b/models/AstronautRobot.properties
@@ -32,19 +32,19 @@ CheckPanelAttachmentPrimitive@retry = true
 removeLeftCoverRecipe1@authorized = true
 # checkPanelAttachmentRecipe1@authorized = true
 
-Propose.Should(InstallSolarPanel)@format = Let's start installing a solar panel together.
+Propose.Should(InstallSolarPanel)@format = Let's start installing a solar panel.
 Propose.Should(PreparePanel)@format = The first step is to prepare the panel.
 Propose.Should(PrepareConnector)@format = Let's prepare the connector together.
 Propose.Should(RemoveLeftCoverPrimitive)@format = Please try to remove the left cover.
 Propose.Should(TakeOutCable)@format = Now, take out the cable.
-Propose.Should(FixPanel)@format = Now, time to fix the panel.
-Propose.Should(PlacePanel)@format = So, first, I am going to place the panel.
+Propose.Should(FixPanel)@format = Now, it is time to fix the panel.
+Propose.Should(PlacePanel)@format = First, I am going to place the panel.
 Propose.Should(WeldPanel)@format = You should weld the panel now.
 Propose.Should(CheckHardware)@format = We are done with this. Let's check the hardware together.
-Propose.Should(CheckPanelAttachment)@format = My turn first. I am going to check the panel attachment.
+Propose.Should(CheckPanelAttachment)@format = First, let me check the panel attachment.
 Propose.Who(CheckPanelAttachmentPrimitive)@format = I failed! But, you are able to do this.
 Propose.Should(CheckPanelAttachmentPrimitive)@format = Please check panel attachment for me.
 Propose.Should(CheckWirings)@format = We are almost there. Please check the wirings.
-Propose.Should(CheckFunction)@format = And finally. We should check the panel function.
-Propose.Should(CheckControlSwitch)@format = I am going to check the control switch.
+Propose.Should(CheckFunction)@format = Finally, we should check the panel function.
+Propose.Should(CheckControlSwitch)@format = Oh, it worked. I am going to check the control switch.
 Propose.Should(CheckCascadingCells)@format = As your final step, check the cascading cells.
